--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Vincents pages
+title: Vincent's pages
 description:
 github_username: vincentvdschaft
 url: https://vincentvdschaft.github.io
